fixed header arrow and searchFriendsDir currentUser removed from list

--- a/views/header.html
+++ b/views/header.html
@@ -1,6 +1,6 @@
 <header id="header">
     <div id="search" ng-style="searchStyle">
-        <input type="submit" value="" alt="search"/>
+        <input type="submit" value="" ui-sref="findfriends" alt="search"/>
     </div>
     <div id="title">Dev Social</div>
     <div id="backArrow" ng-style="backArr" ng-show="backArro">
