adding updates and new files

--- a/public/views/templates/friendsList.html
+++ b/public/views/templates/friendsList.html
@@ -4,6 +4,7 @@
         <new-form-val-dir profile-view="profileView" current-user="currentUser"></new-form-val-dir>
     </div>
     <div class="right-pane">
-        <search-friends-dir profile-view="profileView"></search-friends-dir>
+        <friends-list-dir profile-view="profileView"></friends-list-dir>
     </div>
 </div>
+<footer-dir profile-view="profileView"></footer-dir>
