--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -7,3 +7,4 @@
         <canvas-profile-dir profile-view="profileView" current-user="currentUser"></canvas-profile-dir>
     </div>
 </div>
+<footer-dir profile-view="profileView"></footer-dir>
