--- a/public/views/templates/searchFriends.html
+++ b/public/views/templates/searchFriends.html
@@ -4,6 +4,7 @@
         <new-form-val-dir profile-view="profileView" current-user="currentUser"></new-form-val-dir>
     </div>
     <div class="right-pane">
-        <profile-update-dir profile-view="profileView"></profile-update-dir>
+        <search-friends-dir profile-view="profileView"></search-friends-dir>
     </div>
 </div>
+<footer-dir profile-view="profileView"></footer-dir>
