--- a/public/views/templates/profile.html
+++ b/public/views/templates/profile.html
@@ -4,6 +4,7 @@
         <new-form-val-dir profile-view="profileView" current-user="currentUser"></new-form-val-dir>
     </div>
     <div class="right-pane">
-        <friends-list-dir profile-view="profileView"></friends-list-dir>
+        <profile-update-dir profile-view="profileView"></profile-update-dir>
     </div>
 </div>
+<footer-dir profile-view="profileView"></footer-dir>
