--- a/public/views/templates/profileFriend.html
+++ b/public/views/templates/profileFriend.html
@@ -2,3 +2,4 @@
 <div class="wrapper">
         <canvas-friend-profile-dir profile-view="profileView" current-user="currentUser"></canvas-friend-profile-dir>
 </div>
+<footer-dir profile-view="profileView"></footer-dir>
