--- a/public/css/styles3.css
+++ b/public/css/styles3.css
@@ -4,11 +4,9 @@ body, html {
     margin: 0;
     padding: 0;
 }
-
 body {
     background-color: white;
 }
-
 #header {
     /*position:fixed;*/
     text-align: center;
@@ -30,15 +28,13 @@ body {
     height: 42px;
     width: 66px;
 }
-
 #ham input[type="button"] {
     background: url("../images/Icons/Ham.svg") no-repeat 0 0;
     cursor: pointer;
     border: none;
     height: 20px;
-    width: 66px;
+    width: 10px;
 }
-
 #backArrow input[type="button"] {
     background: url("../images/Icons/Back-Arrow.svg") no-repeat 0 0;
     cursor: pointer;
@@ -46,37 +42,30 @@ body {
     height: 42px;
     width: 66px;
 }
-
 #updateUser {
     width: 80%;
 }
-
 #canvasProfile {
     border-bottom: 1px solid #00FFE9;
 }
-
 #userD {
     width: 100%;
 }
-
 .wrapper {
     width: 80%;
     height: 80%;
     margin: 50px 0 0 auto;
 }
-
 .right-pane {
     width: 60%;
     float: right;
     margin: 0 auto;
 }
-
 .left-pane {
     width: 40%;
     float: left;
     margin: 0 auto;
 }
-
 #bottom-nav {
     display: flex;
     flex-direction: row;
@@ -88,7 +77,6 @@ body {
     padding-top: 10px;
     border-top: 1px solid #d3d3d3;
 }
-
 #bottom-nav .tab {
     height: 100%;
     width: 100%;
@@ -96,10 +84,9 @@ body {
     text-decoration: none;
     color: #d3d3d3;
 }
-
 .input {
     border: 2px solid #d3d3d3;
-    width: 80%;
+    width: 98%;
     -webkit-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1),
     0 0 16px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1),
@@ -110,21 +97,17 @@ body {
     background: rgba(255, 255, 255, 0.5);
     margin: 0 0 10px 0;
 }
-
 .css-form .input.ng-invalid.ng-touched {
     background-color: #FA787E;
 }
-
 .css-form .input.ng-valid.ng-touched {
     background: rgba(255, 255, 255, 0.5);
 }
-
 .l-btn {
-    width: 80%;
+    width: 98%;
     background-color: #00FFE9;
     border: 1px solid #d3d3d3;
 }
-
 .friends-content {
     display: flex;
     flex-wrap: wrap;
@@ -140,12 +123,10 @@ body {
     padding: 10px 10px 10px 10px;
     cursor: pointer;
 }
-
 .friends-page {
     width: 160px;
     height: 160px;
 }
-
 @media only screen and (max-width: 736px) {
     .wrapper {
         overflow-x: hidden;
@@ -173,16 +154,16 @@ body {
         width: 100%;
         margin: 0 auto;
     }
+    #updateUser {
+        width: 100%;
+    }
 }
-
 .friends-page img:hover {
     border: 1px solid #d3d3d3;
 }
-
 .friends-search-input {
     width: 50%;
 }
-
 .input-group .input-group-btn button {
     background: url("../images/Icons/Search.svg") no-repeat 0 0;
     border: 1px solid #d3d3d3;
