--- a/public/css/styles3.css
+++ b/public/css/styles3.css
@@ -128,6 +128,7 @@ body {
     height: 160px;
 }
 @media only screen and (max-width: 736px) {
+    body{ overflow-x: hidden;}
     .wrapper {
         overflow-x: hidden;
         display: inline-block;
